refactor/test(back): minimize hardcoded config and raise coverage